Fix error/scrollbar overlap

--- a/src/components/big-interactive-pages/editor.module.css
+++ b/src/components/big-interactive-pages/editor.module.css
@@ -19,6 +19,8 @@
 	background: #ffffff;
 	position: relative;
 	overflow: hidden;
+	display: flex;
+	flex-direction: column;
 }
 
 .codeContainer .code {
@@ -36,9 +38,7 @@
 .codeContainer .errors {
 	font-family: var(--font-code);
 	font-size: 0.9em;
-	position: absolute;
-	left: 0;
-	bottom: 0;
+	position: relative;
 	width: 100%;
 	height: 80px;
 	overflow-y: auto;
